syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.storage.client.api.grpc";
option java_outer_classname = "FileServiceProto";

service FileService {
  rpc download (FileDownloadGrpcCmd) returns (FileDownloadGrpcResult);
  rpc removeFile (FileRemoveGrpcCmd) returns (google.protobuf.Empty);
}

message FileDownloadGrpcCmd {
  string storageAddress = 1;
  string name = 2;
  string rename = 3;
}

message FileDownloadGrpcResult {
  google.protobuf.BytesValue fileContent = 1;
}

message FileRemoveGrpcCmd {
  string storageAddress = 1;
  string name = 2;
}
